--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header{
   font-weight: oblique;
   background-color: ;
   padding: 10px opx 15px 5px;
-  font-color: dark red;
+  color: teal;
 }
 
 nav#ul{ 
