--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@ main{
   margin: 20px, auto, 0px;
 }
 
+footer{
+  font-size: smaller;
+  text-align: center;
+  background-color: orange;
+  text-color: white;
+}
+
 
 
 
