--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,12 @@ nav ul{
   list-style-type: none;
   display: flex;
   text-decoration: none;
-  font-color: (255,105,180);
+  font-color: RGB (255,105,180);
   font-weight: normal;
 }
 
 nav ul a: hover {
-  color: (0,191,255);
+  color: RGB (0,191,255);
   font-weight: bold;
   text-decoration: uppercase;
 }
@@ -31,7 +31,7 @@ main{
   margin: 20px, auto, 0px;
 }
 
-footer{
+footer {
   font-size: smaller;
   text-align: center;
   background-color: orange;
